--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 <body>
     <div class="container">
         <h1>Мир волшебства и мемов</h1>
-        <p>Добро пожаловать в удивительный мир волшебства и мемов! Здесь вы сможете проверить свои знания и узнать что-то новое.</p>
+        <p>Добро пожаловать в удивительный мир волшебства и мемов! Здесь ты сможешь проверить свои знания и узнать что-то новое.</p>
         <div class="test-section">
-            <button class="test-button" onclick="startTest()">Начать тест</button>
+            <button class="test-button" onclick="startTest()">Начать квест</button>
         </div>
     </div>
 
     <script>
         function startTest() {
-            alert('Тест скоро начнётся! Будьте готовы!');
+            alert('Квест скоро начнётся! Будьте готовы!');
         }
     </script>
 </body>
