--- a/temp.html
+++ b/temp.html
@@ -62,6 +62,7 @@
 
     <script>
         function startTest() {
+            alert('Квест начинается! После открытия страницы квеста жми на зеленый флаг и запускай игру.');
             window.location.href = '/year1.html';
         }
     </script>
